--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.premium.noteappwithmyapi.ui.fragments.LoginFragment"
+        android:name="com.premium.noteappwithmyapi.ui.auth_fragments.LoginFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
@@ -20,7 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.premium.noteappwithmyapi.ui.fragments.RegisterFragment"
+        android:name="com.premium.noteappwithmyapi.ui.auth_fragments.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" />
 </navigation>
